# barnaby

./: .gitignore  DEVELOPMENT_ROADMAP.md  LLM_INTEGRATION.md  PHASE_1_DETAILED_PLAN.md  README.md  TECHNICAL_SPEC.md  docker-compose.yml  readme.txt  setup.sh  test_rasa.sh
backend/: Cargo.toml  fix_admin.sql
backend/migrations/: 001_initial.sql
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/api/routes/: audio.rs  auth.rs  commands.rs  feedback.rs  mod.rs  users.rs
backend/src/auth/: jwt.rs  middleware.rs
backend/src/config/: settings.rs
backend/src/database/: mod.rs  models.rs
backend/src/middleware/: logging.rs
backend/src/mqtt/: mod.rs
backend/src/nlu/: mod.rs  rasa_manager.rs  rust_nlu.rs
backend/src/services/: llm.rs  mod.rs  weather.rs
docker/: Dockerfile.backend
mobile-app/: README.md  pubspec.yaml
mobile-app/android/app/: build.gradle.kts
mobile-app/ios/Runner/: Info.plist
mobile-app/ios/Runner.xcodeproj/: project.pbxproj
mobile-app/test/: widget_test.dart
nlu/rasa/: Dockerfile  config.yml  domain.yml  run.sh
nlu/rasa/data/: nlu.yml
satellite/: Cargo.toml
scripts/: dev-backend.sh  dev-mobile.sh  dev-web.sh
web-ui/: README.md  pubspec.yaml
web-ui/lib/: main.dart
web-ui/lib/models/: chat_message.dart  command.dart  command.g.dart  satellite.dart  satellite.g.dart  user.dart  user.g.dart
web-ui/lib/providers/: auth_provider.dart  chat_provider.dart  dashboard_provider.dart
web-ui/lib/screens/: chat_screen.dart  dashboard_screen.dart  (+2 more)
web-ui/test/: widget_test.dart
web-ui/web/: index.html  manifest.json
(+20 files in other folders)
