[package]
name = "barnaby-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# MQTT
rumqttc = "0.24"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Regex for NLU
regex = "1.0"

# Audio (placeholder - will need platform-specific setup)
# whisper-rs = "0.10"  # Uncomment when ready for STT
# tts = "0.26"         # Uncomment when ready for TTS
